--- a/index.html
+++ b/index.html
@@ -4,82 +4,147 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mini project</title>
+  <title>Document</title>
   <link
   rel="stylesheet"
   href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
   integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn"
   crossorigin="anonymous"
 />
-<style>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<style type="text/css">
   body{
-    display: flex;
-    justify-content:center;
-    box-sizing: 20px;
-  }
-  img{
-    width: 50%;
-    height: 50%;
-  }
-  .container{
-    padding:20px;
-    margin: 10px;
-  }
+  width:100%;
+  border: 5px solid white;
+  padding: 10px;
+  margin: 10px;
+}
+sup{
+  color: red;
+}
+  ol {padding-top:2em}
+  li em, li label, li input {display:inline-block; padding:0 8px 8px 8px; vertical-align: top}
+  li {position: relative; }
+  li em{ width:10.5em}
+  li label{position: absolute;width:4em; bottom: 100% ; margin-left: -1em; font-weight: bold}
+  li input, li label { width:10em ; text-align: center}
+  li+ li label {left:-9999em ;}
+
+.container{
+    display:flex;
+    flex-flow: row wrap;
+    border: 5px solid lightgray;
+    padding: 30px;
+}
+
+#first,#last,#email{
+ margin-right:40px;
+}
+
+label{
+  font-size:20px;
+}
 </style>
+
 </head>
 <body>
   <div class="container">
-    <h1>Mini Project On HTML & CSS</h1>
-    <hr>
-    <h2>Read the given instructions given below before doing your project</h2>
-    <hr>
-    <ul>
-      <li>The project for your HTML & CSS will be a “mini-web site.” Choose a topic that interests you: something that excites you, something you want to tell the whole world about. If you don’t care about the subject, your readers won’t either.
-
-      </li>
-      <li>I want you to concentrate on the HTML, not on finding content, so do not choose a topic that requires lots of research. For example, unless are an expert about the subject, a web site about the kings of Sweden will need much time-consuming research. On the other hand a website about your favorite hobby won’t take much research at all.
-
-      </li>
-    </ul>
-    <h2>Here are further requirements for the assignment:</h2><hr>
-    <ol type="number">
-      <li>Your project must contain a minimum of ten original HTML5 pages (files) that you have written. A single HTML5 file with links to nine pages written by other people is not acceptable. You may not simply link to pages that you have practiced for the HTML & CSS. Your material must all be original.</li>
-      <li>Diagram showing links among an index page and other content pages is shown in the Sample linkage diagram.
-
-      </li>
-      <li>You must draw a diagram showing how your HTML pages link together, and the linkage must make sense. For the linkage diagram you can use any online tools to draw or you can make your diagram by hand then scan it or take a digital photo of the diagram and upload it to the GitHub.<br>
-        <b>Example</b>:<img src="https://images.unsplash.com/photo-1453728013993-6d66e9c9123a?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8dmlld3xlbnwwfHwwfHw%3D&w=1000&q=80" alt="nope">
-        <br><br>
-        <b>Note</b>: A linkage diagram is not the same as a diagram showing. If you have many pages that are all linked to each other, just draw a line that connects them all and label it with words like “all linked to each other” rather than trying to draw dozens of lines with arrows on them.
-      </li>
-      <li>Implementation of your project:
-        <ul type="circle">
-          <li>Your project must have a main page, and it must be named index.html.</li>
-          <li>You must use at least four &lt;img&gt elements, and each alt attribute must be descriptive.</li>
-          <li>You must link to at least two external sites that are related to the content of your site.</li>
-          
-          <li>You may not use the deprecated elements!
-            <ul type="square">
-              <li>Example: &lt;font&gt or &lt;center&gt</li>
-            </ul></li>
-          <li>You must have at least one .</li>
-          <li>You must use an External/Internal stylesheet to control the appearance of all your pages.</li>
-          <li>You must use an External/Internal stylesheet to control the appearance of all your pages.</li>
-          <li>You must have at least two &lt;table&gt tags. At least one of these must be used to present tabular data.</li>
-          <li>Your pages must have proper open close of HTML tags, in order to verify it <a href="http://validator.w3.org/">Click this link and submit your Netlify URL.</a></li>
-          <li>The &lt;title&gt elements of your pages must be descriptive.</li>
-          <li>All your ten pages should contain a common theme which should give a pleasant look and feel. They should not be different for each HTML pages. <ul><li>Example any background color or images.</li></ul></li>
-          <li>Your design should not contain any audio,video or flash</li>
-        </ul>
-      </li>
-      <li>Submission of your project:
-        <ul>
-          <li>All your work files should be uploaded to <a href="https://github.com/">GitHub.</a></li>
-          <li>Deploy your project files with <a href="https://www.netlify.com/">Netlify.</a></li>
-          <li>Submit your GitHub and Netlify URLs in portal.</li>
-        </ul>
-      </li>
-    </ol>
+    <form action="">
+      <div class="row"><label for="first">Name<sup>*</sup></label><br></div>
+      <div class="row">
+        <div class="col-50">
+          <input type="text" class="form-group" id="first"><br>Firstname
+        </div>
+        <div class="col-25">
+         <input type="text" class="form-group" id="last"><br>Lastname
+        </div>
+      </div>
+       <div class="row"><label for="email">Email<sup>*</sup></label></div>
+      <div class="row">
+        <div class="col-25">
+        </div>
+        <div class="col-75">
+          <input type="email" class="form-group" id="email">
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          <label for="">Your Experience<sup>*</sup></label>
+        </div>
+      </div>
+        <div class="col">
+          <span class="fa fa-star checked"></span>
+          <span class="fa fa-star checked"></span>
+          <span class="fa fa-star checked"></span>
+          <span class="fa fa-star"></span>
+          <span class="fa fa-star"></span>
+        </div>
+        <h5>How satisfied are you with<sup>*</sup></h5><br>
+        <br> 
+         <div class="row">
+          <ul type="none">
+            <li>
+             <em>Purchase</em>
+             <label for="most1">Very Unsatisfied</label><input type="radio" id="most1" name="q1">
+             <label for="almost1">Unsatisfied</label><input type="radio" id="almost1"name="q1">
+             <label for="some1">Neutral</label><input type="radio" id="some1" name="q1">
+             <label for="barely1">Satisfied</label><input type="radio" id="barely1" name="q1">
+             <label for="none1">Very Satisfied</label><input type="radio" id="none1" name="q1">
+          </li>
+          <li>
+             <em>Service</em>
+             <label for="most2">Very Unsatisfied</label><input type="radio" id="most2" name="q2">
+             <label for="almost2">Unsatisfied</label><input type="radio" id="almost2"name="q2">
+             <label for="some2">Neutral</label><input type="radio" id="some2" name="q2">
+             <label for="barely2">Satisfied</label><input type="radio" id="barely2" name="q2">
+             <label for="none2">Very Satisfied</label><input type="radio" id="none2" name="q2">
+          </li>
+          <li>
+             <em>Company Overall</em>
+             <label for="most3">Very Unsatisfied</label><input type="radio" id="most3" name="q3">
+             <label for="almost3">Unsatisfied</label><input type="radio" id="almost3"name="q3">
+             <label for="some3">Neutral</label><input type="radio" id="some3" name="q3">
+             <label for="barely3">Satisfied</label><input type="radio" id="barely3" name="q3">
+             <label for="none3">Very Satisfied</label><input type="radio" id="none3" name="q3">
+          </li>
+          </ul>
+         </div>
+         <h5>How likely are you to<sup>*</sup></h5><br>
+        <br> 
+         <div class="row">
+          <ul type="none">
+            <li>
+             <em>Buy from us again</em>
+             <label for="most1">Very Unsatisfied</label><input type="radio" id="most1" name="q1">
+             <label for="almost1">Unsatisfied</label><input type="radio" id="almost1"name="q1">
+             <label for="some1">Neutral</label><input type="radio" id="some1" name="q1">
+             <label for="barely1">Satisfied</label><input type="radio" id="barely1" name="q1">
+             <label for="none1">Very Satisfied</label><input type="radio" id="none1" name="q1">
+          </li>
+          <li>
+             <em>Recommend our products to others</em>
+             <label for="most2">Very Unsatisfied</label><input type="radio" id="most2" name="q2">
+             <label for="almost2">Unsatisfied</label><input type="radio" id="almost2"name="q2">
+             <label for="some2">Neutral</label><input type="radio" id="some2" name="q2">
+             <label for="barely2">Satisfied</label><input type="radio" id="barely2" name="q2">
+             <label for="none2">Very Satisfied</label><input type="radio" id="none2" name="q2">
+          </li>
+          <li>
+             <em>Recommmend our Company to others</em>
+             <label for="most3">Very Unsatisfied</label><input type="radio" id="most3" name="q3">
+             <label for="almost3">Unsatisfied</label><input type="radio" id="almost3"name="q3">
+             <label for="some3">Neutral</label><input type="radio" id="some3" name="q3">
+             <label for="barely3">Satisfied</label><input type="radio" id="barely3" name="q3">
+             <label for="none3">Very Satisfied</label><input type="radio" id="none3" name="q3">
+          </li>
+          </ul>
+         </div>
+         <div>
+           <h5>Additional comments or suggestions</h5>
+           <textarea name="" id="" cols="100" rows="5"></textarea><br>
+           <button class="btn" id="btn">Submit</button>
+         </div>
+    </form>
   </div>
 </body>
 </html>
